# hermes

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
demo/: app.py
examples/: build_dcf_model.py  custom_agent.py  custom_data_source.py  equity_research_report.py  quickstart.py
hermes/: __init__.py  config.py  core.py  llm_providers.py  registry.py
hermes/agents/: __init__.py  base.py  macro.py  market.py  modeling.py  news.py  orchestrator.py  report.py  sec_filings.py
hermes/infra/: __init__.py  cache.py  rate_limiter.py  retry.py  streaming.py
hermes/ingestion/: __init__.py  index_manager.py  sec_parser.py  transcript_parser.py
hermes/tools/: __init__.py  _base.py  charts.py  documents.py  excel.py  fred.py  market_data.py  news.py  sec_edgar.py
tests/: conftest.py  test_llm_providers.py
tests/test_agents/: test_base.py
tests/test_infra/: test_cache.py  test_rate_limiter.py  test_retry.py
tests/test_tools/: test_documents.py  test_excel.py  test_fred.py  test_market_data.py  test_sec_edgar.py
